@@ -40,7 +40,7 @@
 #include "vmath.h"
 
 #include "brep.h"
-#include "dvec.h"
+#include "bn/dvec.h"
 
 #include "raytrace.h"
 #include "rtgeom.h"
